--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yuva0.github.io/cryptoseeker",
+  "homepage": "https://yuva0.github.io/CryptoSeeker",
   "name": "client",
   "version": "0.1.0",
   "private": true,
