Package json changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "name": "cryptoseeker",
   "homepage": "https://yuva0.github.io/cryptoseeker/",
-  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
